# arxivhaiku

./: .gitignore  CLAUDE.md  LICENSE  NOTICE  README.md  nouns.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.json  tsup.config.ts
.github/workflows/: ci.yml
arxivhaiku/: __init__.py  __main__.py  codec.py
arxivhaiku/data/: adjectives.txt  nouns.txt
data/: 02_pos_tagged.tsv  03_length_filtered.tsv  04_quality_filtered.tsv  05_phonetic.tsv  06_tone_scored.tsv  07_selected_adj.txt  07_selected_nouns.txt  07_selection_log.tsv  08_flagged_words.txt  08_human_sample.txt  08_pair_audit.tsv  09_removed.txt  09_review_notes.md  10_sha256.txt
data/raw/: SOURCES.md
docs/: BLOCKLIST.md  CHANGELOG.md  EXTENSION.md  PROCESS.md  SOURCES.md  STATISTICS.md  TONE.md  WEBAPP.md
scripts/: 01_acquire.py  02_pos_tag.py  03_length_filter.py  04_quality_filter.py  05_phonetic.py  06_tone_score.py  07_select.py  08_pair_audit.py  09_self_review.py  10_finalize.py  gen-wordlists.mjs  prepare.mjs  quality_gates.py
src/: codec.ts  index.ts  wordlists.generated.ts
test/: codec.test.ts
tests/: test_codec.py
